"Refactor AI configuration, introduce new AI providers with fallback and custom models, enhance organization and user management, and improve error handling across the application."